# silver-umbrella

./: .gitignore  Build.hpp.in  CMakeLists.txt  Entry.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md  build.hpp  main.c
controllers/: Controller.cpp  Controller.hpp  InputController.cpp  InputController.hpp  MIDIMessage.cpp  MIDIMessage.hpp  OutputController.cpp  OutputController.hpp
interface/: PianoKey.hpp  PianoKeyGraphicsItem.hpp  PianoKeyboard.hpp  PianoKeyboardGraphicsItem.hpp
